@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Reuse of the previous SCU connection to avoid unecessary handshakes
 * Dynamic negotiation of SOP classes for C-Store SCU
 * Fix missing licensing terms about reuse of some DCMTK code
 
